# ml-zoomcamp-2025

./: README.md  pyproject.toml
m01-intro/: homework.ipynb  notes.md
